--- a/static/labs/a-frame-001/index.html
+++ b/static/labs/a-frame-001/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <link rel="icon" type="image/png" href="/favicon.png" />
+
+    <title>Laurence Lord Labs - Experiment: A Frame 001</title>
     <style>
       body {
         background-color: #000;
