ix broken file path

--- a/static/sandbox/earthquake-solution-2/index.html
+++ b/static/sandbox/earthquake-solution-2/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Earthquakes Lister - Solution 2</title>
   </head>
   <body>
-  <script type="text/javascript" src="bundle.js"></script></body>
+    <script
+      type="text/javascript"
+      src="/sandbox/earthquake-solution-2/bundle.js"
+    ></script>
+  </body>
 </html>
