--- a/static/labs/LL782-poster/index.html
+++ b/static/labs/LL782-poster/index.html
@@ -23,15 +23,22 @@
       }
       .interactive-zone {
         position: absolute;
-        background-color: #f0f3;
+        background-color: #f0f2;
         width: 100vw;
         height: 100vh;
         top: 0;
         left: 0;
+        background: radial-gradient(
+          circle at 50%,
+          #f0f,
+          #f0ff 3px,
+          #fff4 3px,
+          #f0f0
+        );
       }
       .container {
-        perspective: 200vw;
-        perspective-origin: 150% 150%;
+        perspective: 100vw;
+        perspective-origin: 50%;
         transform-style: preserve-3d;
       }
       .art {
@@ -65,8 +72,9 @@
       pre {
         position: fixed;
         color: #f0f;
-        background-color: #0006;
+        background-image: linear-gradient(90deg, #0003, #0001);
         padding: 2rem;
+        pointer-events: none;
       }
     </style>
     <div class="container">
