Subtle modification to Poster styles

--- a/static/labs/LL782-poster/index.html
+++ b/static/labs/LL782-poster/index.html
@@ -31,8 +31,8 @@
         background: radial-gradient(
           circle at 50%,
           #f0f,
-          #f0ff 3px,
-          #fff4 3px,
+          #f0ff 1%,
+          #fff4 1%,
           #f0f0
         );
       }
@@ -71,10 +71,15 @@
       }
       pre {
         position: fixed;
-        color: #f0f;
+        color: #f0fe;
         background-image: linear-gradient(90deg, #0003, #0001);
         padding: 2rem;
         pointer-events: none;
+        bottom: 0;
+      }
+
+      pre span {
+        color: #f0f;
       }
     </style>
     <div class="container">
