--- a/static/labs/LL782-poster/index.html
+++ b/static/labs/LL782-poster/index.html
@@ -31,8 +31,10 @@
         width: 100%;
         height: 0;
         padding-top: calc(630 / 1200 * 100%);
-        transform: rotateY(calc(var(--interactive-x) * 60deg))
-          rotateX(calc(var(--interactive-y) * 90deg));
+        transform: rotateY(
+            calc(calc(var(--interactive-x) * 2 - 1) * 0.5 * 60deg)
+          )
+          rotateX(calc(calc(var(--interactive-y) * 2 - 1) * -0.5 * 60deg));
       }
 
       .back-art,
@@ -179,25 +181,23 @@ y: <span id="y">...</span>
       }
 
       function recordX() {
-        consoleX.innerText = asPortionOfWidth(x);
-        rootStyle.setProperty("--interactive-x", asPortionOfWidth(x));
+        const portion = asPortionOfWidth(x);
+        consoleX.innerText = portion;
+        rootStyle.setProperty("--interactive-x", portion);
       }
 
       function recordY() {
-        consoleY.innerText = asPortionOfHeight(y);
-        rootStyle.setProperty("--interactive-y", asPortionOfHeight(y));
+        const portion = asPortionOfHeight(y);
+        consoleY.innerText = portion;
+        rootStyle.setProperty("--interactive-y", portion);
       }
 
       function asPortionOfWidth(n) {
-        const portion = n / interactiveArea.offsetWidth;
-        const result = (portion * 2 - 1) * 0.5;
-        return result;
+        return n / interactiveArea.offsetWidth;
       }
 
       function asPortionOfHeight(n) {
-        const portion = n / interactiveArea.offsetHeight;
-        const result = (portion * 2 - 1) * -0.5;
-        return result;
+        return n / interactiveArea.offsetHeight;
       }
 
       let detailsVisible = true;
