Correct LL782 poster paths

--- a/static/labs/LL782-poster/index.html
+++ b/static/labs/LL782-poster/index.html
@@ -151,8 +151,8 @@ y: <span id="y">...</span>
 
     <nav class="nav">
       <a href="/" title="Homepage">LL782</a>
-      <a href="/notes/LL782-poster/" title="Read the lab notes">
-        ../Notes/LL782-poster
+      <a href="/notes/ll782-poster/" title="Read the lab notes">
+        ../Notes/LL782-Poster
       </a>
     </nav>
 
