Indicate interactive nature of canvas

--- a/static/labs/a-frame-001/index.html
+++ b/static/labs/a-frame-001/index.html
@@ -16,6 +16,9 @@
         position: fixed;
         bottom: 0;
       }
+      canvas {
+        cursor: grab;
+      }
       .external-control {
         appearance: none;
         background-color: #fff9;
@@ -75,8 +78,7 @@
           id="light-0"
           light="type: point; cast-shadow: true; color: #3f3;"
           position="0 1.5 -1"
-        >
-        </a-entity>
+        ></a-entity>
         <a-box
           shadow="receive: true; cast: true;"
           position="0 0 1"
@@ -106,8 +108,7 @@
           id="light-1"
           light="type: point; cast-shadow: true; color: #f3f;"
           position="0 1.5 -1"
-        >
-        </a-entity>
+        ></a-entity>
         <a-box
           shadow="receive: true; cast: true;"
           position="0 0 1"
